# DjangoChannelsTest

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
ChannelsTest/: asgi.py  settings.py  urls.py  wsgi.py
chat/: tests.py
