[tool.poetry]
name = "channelstest"
version = "0.1.0"
description = ""
authors = ["AHTOH_mac <antonlapytko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
channels = "^3.0.4"
channels-redis = "^3.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
